Use AddExtensions in Gradle task
    fix #3102
    fix #1790