@@ -154,7 +154,6 @@ public class CreateProjectMojo extends AbstractMojo {
                     .sourceType(sourceType)
                     .className(className)
                     .buildTool(buildToolEnum)
-                    .extensions(extensions)
                     .doCreateProject(context);
 
             File createdDependenciesBuildFile = new File(projectRoot, buildToolEnum.getDependenciesFile());
@@ -183,17 +182,8 @@ public class CreateProjectMojo extends AbstractMojo {
 
     private void createGradleWrapper(File projectDirectory) {
         try {
-            ProcessBuilder pb = new ProcessBuilder("gradle", "wrapper").directory(projectDirectory)
-                    .inheritIO();
-            Process x = pb.start();
-
-            x.waitFor();
-
-            if (x.exitValue() != 0) {
-                getLog().error("Unable to install the Gradle wrapper (./gradlew) in project. See log for details.");
-            }
-
-        } catch (InterruptedException | IOException e) {
+            Runtime.getRuntime().exec("gradle wrapper", new String[0], projectDirectory);
+        } catch (IOException e) {
             // no reason to fail if the wrapper could not be created
             getLog().error(
                     "Unable to install the Gradle wrapper (./gradlew) in the project. You need to have gradle installed to generate the wrapper files.",
